# gridcover

./: .gitignore  Cargo.toml  Makefile  README.md  Specification.md
.devcontainer/: devcontainer.json
.devcontainer/bookworm/: devcontainer.json
.devcontainer/dotfiles/: .bashrc
assets/: Changelog-next.md  Changelog-template.md  cutter_drawing.dxf  mapex00.yaml  mapex01.yaml  mapex02.yaml
assets/completions/: _gridcover  gridcover.bash
assets/maps/: mapex01.yaml  mapex03.yaml  mapex04.yaml  mapex99.yaml
docs/: user-guide.md
scripts/: gen_font_data.sh  gen_sqlite.py
src/: args.rs  cells.rs  collision.rs  color_theme.rs  db.rs  image.rs  main.rs  mapfile.rs  model.rs  sim.rs  strategy.rs  vector.rs  video.rs
src/mapfile/: circle.rs  line.rs  polygon.rs  rectangle.rs
src/model/: boundingbox.rs  coverageinfo.rs  cuttertype.rs  grid.rs  papersize.rs  quadtree.rs
tests/: batch-test.sh
