[package]
name = "gridcover"
version = "1.1.0-beta1-0001"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.1"
colored = "3.0.0"
chrono = "0.4.41"
thousands = "0.2.0"
image = "0.25.6"
rayon = "1.10"
serde_json = "1.0.140"

[profile.release]
opt-level = 3         
lto = true            
codegen-units = 1     
panic = "abort"       
strip = true  

