[package]
name = "gridcover"
version = "2.1.0-beta3"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.1"
colored = "3.0.0"
chrono = "0.4.41"
thousands = "0.2.0"
image = "0.25.6"
rayon = "1.10"
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.140"
serde_yaml = "0.9.33"
toml = "0.9.0"
toml_write = "0.1.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
num_cpus = "1.16.0"
shell-words = "1.1.0"
indicatif = "0.18.0"
glob = "0.3.2"

[profile.release]
opt-level = 3         
lto = true            
codegen-units = 1     
panic = "abort"       
strip = true  

